Bug 438670 - Discover notifies about updates whereas there are none
Summary: Discover notifies about updates whereas there are none
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Notifier (other bugs)
Version First Reported In: 5.22.0
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: regression
: 427683 438711 438751 438757 438782 438834 438846 438879 438899 438907 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-15 08:43 UTC by Laurent Bonnaud
Modified: 2021-08-05 07:34 UTC (History)
25 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.2
Sentry Crash Report:


Attachments
Illustration of the problem (160.25 KB, image/png)
2021-06-15 08:44 UTC, Laurent Bonnaud
Details
attachment-1670-0.html (1.60 KB, text/html)
2021-06-17 13:19 UTC, sreelakshminovember
Details
attachment-8728-0.html (1.47 KB, text/html)
2021-06-17 13:57 UTC, sreelakshminovember
Details
attachment-20033-0.html (1.02 KB, text/html)
2021-06-23 16:32 UTC, sreelakshminovember
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Bonnaud 2021-06-15 08:43:28 UTC
SUMMARY

I updated my KDE neon system and then discover still notifies me about available updates

STEPS TO REPRODUCE
1. Update the system with "apt full-update"
2. Log out
3. Log in again

OBSERVED RESULT

discover-notifier displays a notification with "Updates available"

EXPECTED RESULT

no notification

SOFTWARE/OS VERSIONS
Linux: KDE neon unstable 
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.84
Qt Version: 5.15.3
Comment 1 Laurent Bonnaud 2021-06-15 08:44:01 UTC
Created attachment 139333 [details]
Illustration of the problem
Comment 2 Patrick Silva 2021-06-15 15:22:56 UTC
Can confirm on my neon unstable.
Comment 3 kelnio@yahoo.com 2021-06-15 17:18:23 UTC
Can confirm this on KDE Neon 5.22 user edition, Plasma version 5.22.1, and on two separate laptops.
Comment 4 Nate Graham 2021-06-15 22:00:35 UTC
lol.

Could this possible be Neon-specific? I don't think I've ever seen this issue on openSUSE Tumbleweed or Fedora.
Comment 5 Rob Kanyo Mican 2021-06-16 01:38:11 UTC
I've encountered this today on two machines running KDE Neon user edition (Plasma 5.22.1, Frameworks 5.83.0, Qt 5.15.3, Kernel 5.8.0-55-generic).

I've found that removing the plasma-discover-backend-flatpak package and logging out/in or rebooting will clear the erroneous update notification out of the system tray.  Once I reinstall plasma-discover-backend-flatpak and log out/in or reboot, the system once again notifies me about updates that do not exist.
Comment 6 Norbert Preining 2021-06-16 05:18:50 UTC
Same here on Debian/sid with the packages I plan to upload to Debian. Also, several users confirmed the same behaviour.
Comment 7 German P 2021-06-16 12:34:25 UTC
Same problem in Manjaro (testing branch).
Comment 8 Gilberto Ferreira 2021-06-16 12:59:34 UTC
Same problem in Kubuntu Hirsute.
Comment 9 Misha Shaygu 2021-06-16 13:15:35 UTC
KDE NEON 5.22.1 the same problem after update to 5.22.1 from 5.22.0.
Comment 10 Fabricio 2021-06-16 14:52:05 UTC
Bug confirmed in a new KDE Neon User Edition fresh install, Plasma 5.22.0, and then upgrading to Plasma 5.22.1.
Comment 11 Nate Graham 2021-06-16 15:08:01 UTC
*** Bug 438600 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2021-06-16 15:10:07 UTC
This is the only substantive Discover commit in 5.22.1: https://invent.kde.org/plasma/discover/-/commit/1f3e45fcb9386a35f3848eda5e72b146966f99c6

It looks quite related to this issue. I'm guessing it's the problem.
Comment 13 Aleix Pol 2021-06-16 15:24:29 UTC
*** Bug 438711 has been marked as a duplicate of this bug. ***
Comment 14 Aleix Pol 2021-06-16 15:26:25 UTC
Git commit 17de49c31baa5a0cd53af0b3b75f410e792eb3e9 by Aleix Pol.
Committed on 16/06/2021 at 15:26.
Pushed by apol into branch 'master'.

flatpak: properly notify about updates

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakNotifier.cpp

https://invent.kde.org/plasma/discover/commit/17de49c31baa5a0cd53af0b3b75f410e792eb3e9
Comment 15 Aleix Pol 2021-06-16 15:27:00 UTC
Git commit 2a3c864386758e6bc8e973002323020f037ec2fb by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 16/06/2021 at 15:26.
Pushed by apol into branch 'Plasma/5.22'.

flatpak: properly notify about updates


(cherry picked from commit 17de49c31baa5a0cd53af0b3b75f410e792eb3e9)

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakNotifier.cpp

https://invent.kde.org/plasma/discover/commit/2a3c864386758e6bc8e973002323020f037ec2fb
Comment 16 BugMeNot 2021-06-16 17:17:07 UTC
*** Bug 438751 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2021-06-16 18:05:52 UTC
*** Bug 438757 has been marked as a duplicate of this bug. ***
Comment 18 sendme.gospels 2021-06-17 09:06:34 UTC
The bug is still there.
Comment 19 Patrick Silva 2021-06-17 12:47:11 UTC
*** Bug 438782 has been marked as a duplicate of this bug. ***
Comment 20 Gilberto Ferreira 2021-06-17 12:58:31 UTC
It's solved here!
Comment 21 MK 2021-06-17 13:06:40 UTC
This is still happening on my machine (up to date Neon user 5.22)
Comment 22 sreelakshminovember 2021-06-17 13:19:49 UTC
Created attachment 139433 [details]
attachment-1670-0.html

I was able to update via pkcon update. That too after separately updating
brave browser. But the issue still persists. What's irritating is it keeps
asking to restart the computer and says installing update when restart
happens. But the installation doesn't take place. And after a second or so
the security update notification appears.

On Thu, Jun 17, 2021, 6:36 PM Antanicus <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=438670
>
> Antanicus <michele.kipiel@tutamail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|RESOLVED                    |REOPENED
>          Resolution|FIXED                       |---
>
> --- Comment #21 from Antanicus <michele.kipiel@tutamail.com> ---
> This is still happening on my machine (up to date Neon user 5.22)
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 23 Nate Graham 2021-06-17 13:52:40 UTC
The bug is resolved with 5.22.2 which hasn't been released yet. So  it will only be fixed for you if you are using a distro (like Neon testing or unstable) that ships not-yet-released software.
Comment 24 sreelakshminovember 2021-06-17 13:57:13 UTC
Created attachment 139434 [details]
attachment-8728-0.html

Thanks for the update! I am using the Neon user version with 5.22.1.

On Thu, Jun 17, 2021 at 7:22 PM Nate Graham <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=438670
>
> Nate Graham <nate@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>    Version Fixed In|                            |5.22.2
>          Resolution|---                         |FIXED
>              Status|REOPENED                    |RESOLVED
>
> --- Comment #23 from Nate Graham <nate@kde.org> ---
> The bug is resolved with 5.22.2 which hasn't been released yet. So  it will
> only be fixed for you if you are using a distro (like Neon testing or
> unstable)
> that ships not-yet-released software.
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 25 Patrick Silva 2021-06-18 00:36:36 UTC
*** Bug 438834 has been marked as a duplicate of this bug. ***
Comment 26 David Redondo 2021-06-18 08:20:52 UTC
*** Bug 438846 has been marked as a duplicate of this bug. ***
Comment 27 Rik Mills 2021-06-18 10:43:04 UTC
(In reply to Nate Graham from comment #23)
> The bug is resolved with 5.22.2 which hasn't been released yet. So  it will
> only be fixed for you if you are using a distro (like Neon testing or
> unstable) that ships not-yet-released software.

Or one with the fix backported, which is the case with Kubuntu 21.10 and the packages in the backports PPA for Kubuntu 21.04
Comment 28 Nate Graham 2021-06-18 10:50:21 UTC
👍
Comment 29 Nate Graham 2021-06-18 16:02:07 UTC
*** Bug 427683 has been marked as a duplicate of this bug. ***
Comment 30 Rik Mills 2021-06-18 17:41:39 UTC
*** Bug 438879 has been marked as a duplicate of this bug. ***
Comment 31 Antonio Rojas 2021-06-19 19:17:55 UTC
*** Bug 438907 has been marked as a duplicate of this bug. ***
Comment 32 Felipe Kinoshita 2021-06-19 20:29:56 UTC
*** Bug 438899 has been marked as a duplicate of this bug. ***
Comment 33 MK 2021-06-23 14:41:15 UTC
Solved for me after the latest update

System details:
Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.8.0-59-generic (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 7.1 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520
Comment 34 Fabricio 2021-06-23 15:09:22 UTC
Bug fixed after upgrading to Plasma 5.22.2

System details:
Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.8.0-59-generic (64-bit)
Graphics Platform: X11
Comment 35 sreelakshminovember 2021-06-23 16:32:55 UTC
Created attachment 139619 [details]
attachment-20033-0.html

Issue got fixed after recent update. Thank you

On Wed, Jun 23, 2021 at 8:39 PM Fabricio <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=438670
>
> --- Comment #34 from Fabricio <fabgrel10@yahoo.com> ---
> Bug fixed after upgrading to Plasma 5.22.2
>
> System details:
> Operating System: KDE neon 5.22
> KDE Plasma Version: 5.22.2
> KDE Frameworks Version: 5.83.0
> Qt Version: 5.15.3
> Kernel Version: 5.8.0-59-generic (64-bit)
> Graphics Platform: X11
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 36 sendme.gospels 2021-06-23 17:24:29 UTC
The bug got fixed thank you. But the kde neon boot animation is not there.
Comment 37 tony 2021-06-24 08:35:29 UTC
fixed for me as well this morning, thanks

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.4.0-67-generic (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620
Comment 38 olcay seker 2021-06-28 21:13:27 UTC
I cant update to 5.22.2.1. Discover keeps notifying for updates. I click "Update All" button, it progress almost instantly and ask me for rebooting. But after rebooting discover-notifier still notifying for updates. Removing/re-installing the plasma-discover-backend-flatpak package did not solve the problem. Any workarounds? 



Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.1
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.4.0-74-generic (64-bit)
Comment 39 olcay seker 2021-06-28 21:37:01 UTC
Ah i solve it by commandline. sudo apt full-upgrade solved the problem.

(In reply to olcay seker from comment #38)
> I cant update to 5.22.2.1. Discover keeps notifying for updates. I click
> "Update All" button, it progress almost instantly and ask me for rebooting.
> But after rebooting discover-notifier still notifying for updates.
> Removing/re-installing the plasma-discover-backend-flatpak package did not
> solve the problem. Any workarounds? 
> 
> 
> 
> Operating System: KDE neon 5.22
> KDE Plasma Version: 5.22.1
> KDE Frameworks Version: 5.83.0
> Qt Version: 5.15.3
> Kernel Version: 5.4.0-74-generic (64-bit)
Comment 40 Armando Ota 2021-06-29 05:50:56 UTC
Problem is back ... just updated 5.22.1 do 5.22.2 and Discover shows empty updates again.

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.8.0-59-generic (64-bit)
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-8086K CPU @ 4.00GHz
Memory: 31.3 GiB of RAM
Graphics Processor: GeForce GTX 1080 Ti/PCIe/SSE2
Comment 41 r.kunschke 2021-07-01 19:39:49 UTC
The problem reappeared for me too. 

Operating System: Arch Linux
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Kernel Version: 5.12.14-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 7,6 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 42 Armando Ota 2021-07-02 06:30:04 UTC
Another update and problem is gone. 

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.8.0-59-generic (64-bit)
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-8086K CPU @ 4.00GHz
Memory: 31,3 GiB of RAM
Graphics Processor: GeForce GTX 1060 3GB/PCIe/SSE2
Comment 43 r.kunschke 2021-07-02 08:11:17 UTC
me too.....
Comment 44 Christian Hartmann 2021-08-05 07:28:27 UTC
confiremd here for 5.22.4 (Neon), but seems to be originated mainly or only by 

$ flatpak list --app
Name                      Application ID                           Version      Zweig       Installation
Haruna Video Player       com.georgefb.haruna                      0.6.3        stable      system

this one seems not to get any updates, although it is indicated as available
Comment 45 Christian Hartmann 2021-08-05 07:34:53 UTC
(In reply to Christian Hartmann from comment #44)
> confiremd here for 5.22.4 (Neon), but seems to be originated mainly or only
> by 
> 
> $ flatpak list --app
> Name                      Application ID                           Version  
> Zweig       Installation
> Haruna Video Player       com.georgefb.haruna                      0.6.3    
> stable      system
> 
> this one seems not to get any updates, although it is indicated as available


command line update via $ flatpack update ... fixed it by replacing(!) it with:

Haruna Video Player       org.kde.haruna                           0.6.3        stable      system