flatpak: properly notify about updates

BUG: 438670


(cherry picked from commit 17de49c31baa5a0cd53af0b3b75f410e792eb3e9)